--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ body {
   background: #404bbf;
   margin-top: 20px;
 }
-/* Header */
+/* /Header */
 
 /* Hero section */
 .hero-section {
@@ -192,6 +192,8 @@ body {
 .hero-btn:focus {
   background: #404bbf;
 }
+/* /Hero section */
+
 /* Features section */
 .features-section {
   padding-top: 120px;
@@ -232,7 +234,7 @@ body {
   justify-content: center;
 }
 
-/* Features section */
+/* /Features section */
 
 /* Our Team section */
 .team-section {
@@ -315,7 +317,7 @@ body {
   width: 16px;
   height: 16px;
 }
-/* Our Team section */
+/* /Our Team section */
 
 /* Portfolio Section */
 .header-portfolio {
@@ -390,6 +392,7 @@ body {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/* /Portfolio Section */
 
 /* Footer Section */
 .footer-section {
@@ -404,6 +407,7 @@ body {
 .container-footer-text {
   margin-right: 120px;
   margin-left: 0;
+  width: 264px;
 }
 .logothype {
   font-family: Raleway, sans-serif;
@@ -429,7 +433,9 @@ body {
   width: 264px;
   margin-right: 120px;
 }
-
+.footer-container-messenger {
+  margin-right: 80px;
+}
 .messenger-footer-text {
   color: #ffffff;
   font-size: 16px;
@@ -441,8 +447,6 @@ body {
 .menu-messenger-footer {
   display: flex;
   gap: 16px;
-
-  margin-top: 16px;
 }
 .list-messenger-footer {
   width: 40px;
@@ -468,4 +472,234 @@ body {
 .link-footer-messenger:focus {
   background-color: #31d0aa;
 }
-/* Footer Section */
+.footer-form {
+  display: inline-flex;
+  gap: 24px;
+}
+.footer-form-section {
+  display: flex;
+  flex-direction: column;
+}
+.btn-footer-form {
+  display: flex;
+  gap: 16px;
+  width: 165px;
+  height: 40px;
+  border-radius: 4px;
+  padding: 8px 0 8px 24px;
+  cursor: pointer;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background: #4d5ae5;
+  color: #ffffff;
+}
+.btn-footer-form:hover,
+.btn-footer-form:focus {
+  background-color: #404bbf;
+}
+.footer-input-form {
+  width: 264px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background: #2e2f42;
+  padding: 8px 16px;
+}
+.footer-form-text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: #ffffff;
+}
+::placeholder {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+/* /Footer Section */
+
+/* Backdrop */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #fcfcfc;
+}
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  line-height: 0;
+  padding: 8px;
+  cursor: pointer;
+  fill: #2e2f42;
+  background-color: #e7e9fc;
+  transition: fill,
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  fill: #ffffff;
+  background-color: #404bbf;
+}
+.backdrop-modal {
+  padding: 72px 24px 24px 24px;
+}
+.modal-contacts-description {
+  text-align: center;
+  width: 360px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: #2e2f42;
+}
+.modal-form-wrapper {
+  margin-bottom: 8px;
+}
+.modal-form-field-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.modal-form-field {
+  width: 100%;
+  height: 58px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  padding-left: 38px;
+  transition: border-color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-field:focus {
+  border-color: #4d5ae5;
+  outline-color: transparent;
+  outline-offset: 4px;
+}
+.modal-form-wrapper {
+  position: relative;
+}
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-field:focus + .modal-form-icon {
+  fill: #4d5ae5;
+}
+.textarea-text {
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  resize: none;
+  margin-bottom: 16px;
+}
+.textarea-text::placeholder {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.04em;
+  padding: 8px 16px;
+  color: rgba(46, 47, 66, 0.4);
+}
+.textarea-text:focus {
+  border-color: #4d5ae5;
+  outline-color: transparent;
+  outline-offset: 4px;
+}
+.modal-form-checkbox-wrapper {
+  margin-bottom: 24px;
+}
+.modal-form-checkbox-label {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.privacy-policy-link {
+  text-decoration-line: underline;
+}
+.modal-form-own-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 1px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  cursor: pointer;
+  fill: transparent;
+  margin-right: 8px;
+}
+.modal-form-checkbox:checked
+  + .modal-form-checkbox-label
+  .modal-form-own-checkbox {
+  background-color: #404bbf;
+}
+.modal-form-send-button {
+  display: block;
+  margin: 0 auto;
+  padding: 16px 32px;
+  border-radius: 4px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: var(--WHITE, #fff);
+  text-align: center;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04px;
+  cursor: pointer;
+}
+.modal-form-send-button:hover,
+.modal-form-send-button:focus {
+  background-color: #404bbf;
+}
+
+/* /Backdrop */
