--- a/css/styles.css
+++ b/css/styles.css
@@ -482,8 +482,10 @@ body {
 }
 .btn-footer-form {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 16px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   border-radius: 4px;
   padding: 8px 0 8px 24px;
@@ -500,6 +502,9 @@ body {
 .btn-footer-form:focus {
   background-color: #404bbf;
 }
+.footer-icon-send {
+  margin-left: 16px;
+}
 .footer-input-form {
   width: 264px;
   height: 40px;
@@ -507,8 +512,14 @@ body {
   border-radius: 4px;
   border: 1px solid #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background: #2e2f42;
+  background: transparent;
   padding: 8px 16px;
+
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
 }
 .footer-form-text {
   font-size: 16px;
