--- a/css/styles.css
+++ b/css/styles.css
@@ -511,13 +511,13 @@ body {
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #ffffff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  filter: box-shadow 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   background: transparent;
   padding: 8px 16px;
 
   font-size: 12px;
   font-weight: 400;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
 }
