--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,7 @@ body {
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #ffffff;
-  filter: box-shadow 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background: transparent;
   padding: 8px 16px;
 
