--- a/css/styles.css
+++ b/css/styles.css
@@ -488,7 +488,7 @@ body {
   min-width: 165px;
   height: 40px;
   border-radius: 4px;
-  padding: 8px 0 8px 24px;
+  padding: 8px 24px 8px 24px;
   cursor: pointer;
   border: none;
   font-size: 16px;
