--- a/css/styles.css
+++ b/css/styles.css
@@ -603,7 +603,7 @@ body {
 .backdrop-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop-modal {
+.modal {
   padding: 72px 24px 24px 24px;
 }
 .modal-contacts-description {
