--- a/css/styles.css
+++ b/css/styles.css
@@ -625,16 +625,18 @@ body {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.7;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
 .modal-form-field {
   width: 100%;
-  height: 58px;
+  height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms
     cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -643,19 +645,22 @@ body {
   outline-color: transparent;
   outline-offset: 4px;
 }
-.modal-form-wrapper {
+.modal-form-field-text {
   position: relative;
 }
 .modal-form-icon {
   position: absolute;
   top: 50%;
   left: 16px;
-
+  transform: translateY(-50%);
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-field:focus + .modal-form-icon {
   fill: #4d5ae5;
+}
+.modal-form-field-comment {
+  margin-bottom: 16px;
 }
 .textarea-text {
   width: 100%;
@@ -663,7 +668,6 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
-  margin-bottom: 16px;
 }
 .textarea-text::placeholder {
   font-size: 12px;
