--- a/css/styles.css
+++ b/css/styles.css
@@ -120,10 +120,12 @@ body {
 }
 .link-studio {
   position: relative;
-  color: #404bbf;
+  color: #2e2f42;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.active-link {
+  color: #404bbf;
+}
 .active-link::after {
   content: '';
   position: absolute;
@@ -539,6 +541,7 @@ body {
 /* /Footer Section */
 
 /* Backdrop */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -668,13 +671,22 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
+
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  transition: border-color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 .textarea-text::placeholder {
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.7;
+  line-height: 1.17;
   letter-spacing: 0.04em;
-  padding: 8px 16px;
   color: rgba(46, 47, 66, 0.4);
 }
 .textarea-text:focus {
@@ -688,12 +700,13 @@ body {
 .modal-form-checkbox-label {
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.7;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
 .privacy-policy-link {
   text-decoration-line: underline;
+  color: #4d5ae5;
 }
 .modal-form-own-checkbox {
   display: inline-flex;
@@ -701,21 +714,28 @@ body {
   align-items: center;
   width: 16px;
   height: 16px;
-  border-radius: 1px;
+  border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   cursor: pointer;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms
+      cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-checkbox:checked
   + .modal-form-checkbox-label
   .modal-form-own-checkbox {
+  border: none;
   background-color: #404bbf;
+  fill: #f4f4fd;
 }
 .modal-form-send-button {
   display: block;
   margin: 0 auto;
   padding: 16px 32px;
+  min-width: 169px;
   border-radius: 4px;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -725,8 +745,10 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.04px;
+  letter-spacing: 0.04em;
   cursor: pointer;
+  transition: background-color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-send-button:hover,
 .modal-form-send-button:focus {
