--- a/css/styles.css
+++ b/css/styles.css
@@ -671,7 +671,7 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
-
+  outline: transparent;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
